Registrar actas de llegada por despacho
